[gd_scene format=3 uid="uid://bt27ml1bhbsxe"]

[ext_resource type="Script" uid="uid://d12iplvc6rmo" path="res://scene/characters/player/player.gd" id="1_v7krq"]
[ext_resource type="Texture2D" uid="uid://nb44kappc56b" path="res://assets/game/characters/basic_character_sprite.png" id="1_viwsh"]
[ext_resource type="Texture2D" uid="uid://cdhnjp4rhwgga" path="res://assets/game/characters/basic_character _actions.png" id="2_ekqmh"]
[ext_resource type="Script" uid="uid://qgkfdaxn36ue" path="res://script/state_machine/node_state_machine.gd" id="3_glldc"]
[ext_resource type="Script" uid="uid://bc07jqha4fis" path="res://scene/characters/player/idle_state.gd" id="4_glldc"]
[ext_resource type="Script" uid="uid://dt54psqpwmmjh" path="res://scene/characters/player/walk_state.gd" id="5_vj7nq"]
[ext_resource type="Script" uid="uid://brvtxufs44faw" path="res://scene/characters/player/chopping.gd" id="7_8nhx4"]
[ext_resource type="Script" uid="uid://bthyoy221pksc" path="res://scene/characters/player/tilling_state.gd" id="8_wf2u3"]
[ext_resource type="Script" uid="uid://bcmtkub70fcon" path="res://scene/characters/player/watering_state.gd" id="9_efkcd"]
[ext_resource type="Script" uid="uid://q72g48eqegof" path="res://scene/characters/player/plantingstate.gd" id="10_a6bj1"]
[ext_resource type="PackedScene" uid="uid://dt17h0pl2bom1" path="res://scene/components/hit_component.tscn" id="10_uy7wp"]
[ext_resource type="Texture2D" uid="uid://cypot74r1fwp7" path="res://assets/game/25半透明工具提示贴图.png" id="11_tg3vd"]
[ext_resource type="Script" uid="uid://b5ew3ojqs8gpc" path="res://scene/characters/player/no_placement.gd" id="13_8gxq7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_viwsh"]
atlas = ExtResource("2_ekqmh")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekqmh"]
atlas = ExtResource("2_ekqmh")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnss5"]
atlas = ExtResource("2_ekqmh")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_or6p2"]
atlas = ExtResource("2_ekqmh")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojgml"]
atlas = ExtResource("2_ekqmh")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_51m3a"]
atlas = ExtResource("2_ekqmh")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gunr"]
atlas = ExtResource("2_ekqmh")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y8ax"]
atlas = ExtResource("2_ekqmh")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_glldc"]
atlas = ExtResource("1_viwsh")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vj7nq"]
atlas = ExtResource("1_viwsh")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7krq"]
atlas = ExtResource("1_viwsh")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nhx4"]
atlas = ExtResource("1_viwsh")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf2u3"]
atlas = ExtResource("1_viwsh")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_efkcd"]
atlas = ExtResource("1_viwsh")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uy7wp"]
atlas = ExtResource("1_viwsh")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg3vd"]
atlas = ExtResource("1_viwsh")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6bj1"]
atlas = ExtResource("2_ekqmh")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gxq7"]
atlas = ExtResource("2_ekqmh")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mhdd"]
atlas = ExtResource("2_ekqmh")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmjh5"]
atlas = ExtResource("2_ekqmh")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg7s0"]
atlas = ExtResource("2_ekqmh")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2q3ur"]
atlas = ExtResource("2_ekqmh")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyhlb"]
atlas = ExtResource("2_ekqmh")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h5sq"]
atlas = ExtResource("2_ekqmh")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6fjl"]
atlas = ExtResource("1_viwsh")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1awt"]
atlas = ExtResource("1_viwsh")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5oub"]
atlas = ExtResource("1_viwsh")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w36fw"]
atlas = ExtResource("1_viwsh")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hddc"]
atlas = ExtResource("1_viwsh")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_aihis"]
atlas = ExtResource("1_viwsh")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_638b5"]
atlas = ExtResource("1_viwsh")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdec8"]
atlas = ExtResource("1_viwsh")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_encxb"]
atlas = ExtResource("2_ekqmh")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_taf0p"]
atlas = ExtResource("2_ekqmh")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rl2g8"]
atlas = ExtResource("2_ekqmh")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8er2l"]
atlas = ExtResource("2_ekqmh")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4104"]
atlas = ExtResource("2_ekqmh")
region = Rect2(0, 480, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_roplt"]
atlas = ExtResource("2_ekqmh")
region = Rect2(48, 480, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6oj06"]
atlas = ExtResource("2_ekqmh")
region = Rect2(0, 528, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov7hk"]
atlas = ExtResource("2_ekqmh")
region = Rect2(48, 528, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_wnss5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_viwsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekqmh")
}],
"loop": false,
"name": &"chopping_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnss5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_or6p2")
}],
"loop": false,
"name": &"chopping_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojgml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51m3a")
}],
"loop": false,
"name": &"chopping_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gunr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y8ax")
}],
"loop": false,
"name": &"chopping_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_glldc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vj7nq")
}],
"loop": true,
"name": &"idle_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7krq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nhx4")
}],
"loop": true,
"name": &"idle_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf2u3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efkcd")
}],
"loop": true,
"name": &"idle_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uy7wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg3vd")
}],
"loop": true,
"name": &"idle_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6bj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gxq7")
}],
"loop": false,
"name": &"tilling_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mhdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmjh5")
}],
"loop": false,
"name": &"tilling_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg7s0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2q3ur")
}],
"loop": false,
"name": &"tilling_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyhlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4h5sq")
}],
"loop": false,
"name": &"tilling_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6fjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1awt")
}],
"loop": true,
"name": &"walking_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5oub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w36fw")
}],
"loop": true,
"name": &"walking_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hddc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aihis")
}],
"loop": true,
"name": &"walking_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_638b5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdec8")
}],
"loop": true,
"name": &"walking_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_encxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_taf0p")
}],
"loop": false,
"name": &"watering_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl2g8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8er2l")
}],
"loop": false,
"name": &"watering_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4104")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_roplt")
}],
"loop": false,
"name": &"watering_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6oj06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov7hk")
}],
"loop": false,
"name": &"watering_right",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_viwsh"]
size = Vector2(10, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tg3vd"]
size = Vector2(10, 6)

[node name="player" type="CharacterBody2D" unique_id=1489117648]
collision_layer = 2
collision_mask = 65
script = ExtResource("1_v7krq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=2108063873 groups=["player"]]
sprite_frames = SubResource("SpriteFrames_wnss5")
animation = &"chopping_left"
autoplay = "idle_front"
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=550931497]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_viwsh")

[node name="StateMachine" type="Node" parent="." unique_id=149964210 node_paths=PackedStringArray("initial_node_state", "current_node_state")]
script = ExtResource("3_glldc")
initial_node_state = NodePath("Idle")
current_node_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" unique_id=689025288 node_paths=PackedStringArray("player", "animated_sprite_2d")]
script = ExtResource("4_glldc")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="Walking" type="Node" parent="StateMachine" unique_id=2025743671 node_paths=PackedStringArray("player", "animated_sprite_2d")]
script = ExtResource("5_vj7nq")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="Chopping" type="Node" parent="StateMachine" unique_id=1621077653 node_paths=PackedStringArray("player", "animated_sprite_2d", "hit_component_collision_shape")]
script = ExtResource("7_8nhx4")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
hit_component_collision_shape = NodePath("../../HitComponentt/HitComponentCollisionShape2D")

[node name="Tilling" type="Node" parent="StateMachine" unique_id=1700405683 node_paths=PackedStringArray("player", "animated_sprite_2d")]
script = ExtResource("8_wf2u3")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="Watering" type="Node" parent="StateMachine" unique_id=290240052 node_paths=PackedStringArray("player", "animated_sprite_2d", "hit_component_collision_shape")]
script = ExtResource("9_efkcd")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
hit_component_collision_shape = NodePath("../../HitComponentt/HitComponentCollisionShape2D")

[node name="Planting" type="Node" parent="StateMachine" unique_id=360860711 node_paths=PackedStringArray("player", "animated_sprite_2d")]
script = ExtResource("10_a6bj1")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="HitComponentt" parent="." unique_id=252061593 instance=ExtResource("10_uy7wp")]

[node name="HitComponentCollisionShape2D" type="CollisionShape2D" parent="HitComponentt" unique_id=2128460300]
shape = SubResource("RectangleShape2D_tg3vd")
debug_color = Color(0.79272765, 0.3450467, 0.65227157, 0.41960785)

[node name="DirtPreview" type="Sprite2D" parent="." unique_id=1281320824]
z_index = 10
texture = ExtResource("11_tg3vd")

[node name="Component" type="Node" parent="." unique_id=264426371]

[node name="NoPlacement" type="Node" parent="Component" unique_id=1916731526]
script = ExtResource("13_8gxq7")
